--- a/index.html
+++ b/index.html
@@ -12,14 +12,99 @@
     <title>Todo List</title>
 </head>
 <body>
+    <!-- macro struttura html-->
 
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-12">
-                <h2>prova</h2>
+    <div id="app">
+        <!-- parte header -->
+        <header>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>Todo List</h2>
+                    </div>
+                </div>
             </div>
-        </div>
+        </header>
+        <!-- parte footer -->
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="todo-list rounded">
+                            <ul class="list-unstyled">
+                                <li>
+                                    <div class="d-flex justify-content-between">
+                                        <div>
+                                            prova prova
+                                        </div>
+                                        <div class="buttons">
+                                            <button class="btn btn-sm btn-square btn-success">
+                                                <i class="fas fa-check"></i>
+                                            </button> 
+                                            <button class="btn btn-sm btn-square btn-danger">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="d-flex justify-content-between">
+                                        <div>
+                                            prova prova
+                                        </div>
+                                        <div class="buttons">
+                                            <button class="btn btn-sm btn-square btn-success">
+                                                <i class="fas fa-check"></i>
+                                            </button> 
+                                            <button class="btn btn-sm btn-square btn-danger">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="d-flex justify-content-between">
+                                        <div>
+                                            prova prova
+                                        </div>
+                                        <div class="buttons">
+                                            <button class="btn btn-sm btn-square btn-success">
+                                                <i class="fas fa-check"></i>
+                                            </button> 
+                                            <button class="btn btn-sm btn-square btn-danger">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="d-flex justify-content-between">
+                                        <div>
+                                            prova prova
+                                        </div>
+                                        <div class="buttons">
+                                            <button class="btn btn-sm btn-square btn-success">
+                                                <i class="fas fa-check"></i>
+                                            </button> 
+                                            <button class="btn btn-sm btn-square btn-danger">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                            <div class="d-flex">
+                                <input type="text" class="form-control" placeholder="Aggiungi il nuovo item">
+                                <button type="button" class="btn-add-task ms-3 rounded">Aggiungi</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
+
+
     <!-- link a vue -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- link allo script -->
