--- a/index.html
+++ b/index.html
@@ -32,58 +32,12 @@
                     <div class="col-12">
                         <div class="todo-list rounded">
                             <ul class="list-unstyled">
-                                <li>
+                                <!-- utilizzo il v-for per iterare l'array di oggetti negli item -->
+                                <li v-for="(item, index) in items" :key="index">
                                     <div class="d-flex justify-content-between">
-                                        <div>
-                                            prova prova
-                                        </div>
+                                        <div>{{ item.text}}</div>
                                         <div class="buttons">
-                                            <button class="btn btn-sm btn-square btn-success">
-                                                <i class="fas fa-check"></i>
-                                            </button> 
-                                            <button class="btn btn-sm btn-square btn-danger">
-                                                <i class="fas fa-trash"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="d-flex justify-content-between">
-                                        <div>
-                                            prova prova
-                                        </div>
-                                        <div class="buttons">
-                                            <button class="btn btn-sm btn-square btn-success">
-                                                <i class="fas fa-check"></i>
-                                            </button> 
-                                            <button class="btn btn-sm btn-square btn-danger">
-                                                <i class="fas fa-trash"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="d-flex justify-content-between">
-                                        <div>
-                                            prova prova
-                                        </div>
-                                        <div class="buttons">
-                                            <button class="btn btn-sm btn-square btn-success">
-                                                <i class="fas fa-check"></i>
-                                            </button> 
-                                            <button class="btn btn-sm btn-square btn-danger">
-                                                <i class="fas fa-trash"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="d-flex justify-content-between">
-                                        <div>
-                                            prova prova
-                                        </div>
-                                        <div class="buttons">
-                                            <button class="btn btn-sm btn-square btn-success">
+                                            <button class="btn btn-sm btn-square btn-success mx-2">
                                                 <i class="fas fa-check"></i>
                                             </button> 
                                             <button class="btn btn-sm btn-square btn-danger">
