--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                                         <div class="buttons">
                                             <!-- pulsante che aggiunge e rimuove la sbarra -->
                                             <button class="btn btn-sm btn-square btn-success mx-2" @click="toggleDone(index)">
-                                                <i class="fas fa-check"></i>
+                                                <!-- operatore ternario per variare in base alla condizione l'icona del bottone -->
+                                                <i :class="(item.done) ? 'fas fa-times' : 'fas fa-check' "></i>
                                             </button> 
                                             <button class="btn btn-sm btn-square btn-danger">
                                                 <i class="fas fa-trash"></i>
