[UPD] aggiunto v-model all'elemento input

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 </li>
                             </ul>
                             <div class="d-flex">
-                                <input type="text" class="form-control" placeholder="Aggiungi il nuovo item">
+                                <input type="text" class="form-control" placeholder="Aggiungi il nuovo item" v-model="newItem">
                                 <button type="button" class="btn-add-task ms-3 rounded" @click="addItem()">Aggiungi</button>
                             </div>
                         </div>
